EUI-2 Collapse long descripiton text in issued tokens table

--- a/src/assets/styles/base/normalize.scss
+++ b/src/assets/styles/base/normalize.scss
@@ -212,3 +212,7 @@ td {
   font-size: 100%;
   vertical-align: baseline;
 }
+
+th {
+  text-align: left;
+}
